Update UltraFastPropertyMap.java